# RSP_mirte

./: .gitignore  .gitlab-ci.yml  LABGROUP.md  README.md
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/: mirte_controller.h
control_barrel_world/launch/: solution.launch
control_barrel_world/src/: control_barrel_world_node.cpp  mirte_controller.cpp
opencv_person_detector/: CMakeLists.txt  package.xml
opencv_person_detector/include/: person_detector.h
opencv_person_detector/src/: opencv_person_detector_node.cpp  person_detector.cpp
