<?xml version="1.0"?>
<package format="2">
  <name>control_barrel_world</name>
  <version>1.3.1</version>
  <description>Controlling Mirte in a Gazebo simulation using 3D obstacle detections (PCL) and 2D person detections (OpenCV)</description>
  <maintainer email="y.chammat@student.tudelft.nl">Mees Chammat</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <exec_depend>mirte_gazebo</exec_depend>
  <exec_depend>opencv_person_detector</exec_depend>
</package>
