<?xml version="1.0"?>
<package format="2">
  <name>opencv_person_detector</name>
  <version>1.3.1</version>
  <description>Uses OpenCV's HOG detector to find persons in Mirte's camera images</description>
  <maintainer email="y.chammat@student.tudelft.nl">Mees Chammat</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <exec_depend>mirte_gazebo</exec_depend>
</package>
